# bifrost

./: .gitignore  ARCHITECTURE.md  COMMANDS.md  INSTALLATION.md  LICENSE  MANIFEST.in  PLAN.md  README.md  README_BIFROST.md  data_inspection.py  pyproject.toml  requirements.txt  setup.py  simple_generation_demo.py
bifrost/: __init__.py  config.py  example.py  generation_cli.py  train_test.py  train_test_depreciated.py  training_cli.py
bifrost/data/: dataset.py  generate_wyckoff_data.py  properties.py  tokenizer.py  wyckoff_map_sg_letter_to_orbit.json  wyckoff_orbits.json  wyckoff_orbits_token_data.json
bifrost/data/mp/: generate_mp_dataset.py  mp_dataset_small.json
bifrost/generation/: __init__.py  decoder.py  generator.py  utils.py
bifrost/model/: __init__.py  bifrost.py  embeddings.py  heads.py  transformer.py
bifrost/training/: __init__.py  curriculum.py  optimizer.py  train.py
depreciated/: PLAN.md  PLAN_2.md
