[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost"
version = "1.0.0"
description = "BIFROST: Crystal Structure Generation with Property Conditioning"
readme = "README_BIFROST.md"
license = { text = "MIT" }
authors = [{ name = "BIFROST Team", email = "team@bifrost.org" }]
maintainers = [{ name = "BIFROST Team", email = "team@bifrost.org" }]
keywords = [
    "machine-learning",
    "materials-science",
    "crystal-structures",
    "deep-learning",
    "transformer",
    "materials-discovery",
    "property-prediction",
    "generative-models",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "typing-extensions>=4.0.0",
    "pydantic==2.9.2",
    "mp_api==0.44.0",
    "pymatgen>=2023.1.0",
    "spglib>=2.0.0",
    "pyxtal>=0.6.6",

]

# Default installation
[project.urls]
Homepage = "https://github.com/bifrost-crystals/bifrost"
Documentation = "https://bifrost-crystals.readthedocs.io/"
Repository = "https://github.com/bifrost-crystals/bifrost"
Issues = "https://github.com/bifrost-crystals/bifrost/issues"
Changelog = "https://github.com/bifrost-crystals/bifrost/blob/main/CHANGELOG.md"

# Package discovery
[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["bifrost*"]
exclude = ["tests*", "docs*", "examples*"]

# Entry points
[project.scripts]
bifrost-train = "bifrost.training_cli:main"
bifrost-generate = "bifrost.generation_cli:main"
bifrost-generate-vocab = "bifrost.data.generate_wyckoff_data:main"
# Core dependencies
